Fix trailing slash

--- a/m1-lesson6/src/main/resources/templates/tl/list.html
+++ b/m1-lesson6/src/main/resources/templates/tl/list.html
@@ -7,7 +7,7 @@
     <h1 layout:fragment="header">Users : View all</h1>
     <div layout:fragment="content" class="container">
         <div class="pull-right">
-            <a href="form.html" th:href="@{/user/(form)}">Create User</a>
+            <a href="form.html" th:href="@{/user(form)}">Create User</a>
         </div>
         <table class="table table-bordered table-striped">
             <thead>
